Moxie font for BUY button, indented logo

--- a/assets/css-appheader.scss.liquid
+++ b/assets/css-appheader.scss.liquid
@@ -9,6 +9,7 @@ $cell-margin-half: $cell-margin * 0.5;
 $cell-margin-2x: $cell-margin * 2;
 $cell-margin-3x: $cell-margin * 3;
 $cell-margin-4x: $cell-margin * 4;
+$cell-margin-5x: $cell-margin * 5;
 $cell-margin-8x: $cell-margin * 8;
 
 #appheader {
@@ -21,7 +22,7 @@ $cell-margin-8x: $cell-margin * 8;
 
   #appheadertop {
     position: relative;
-    padding: $cell-margin $cell-margin $cell-margin $cell-margin-2x;
+    padding: $cell-margin $cell-margin $cell-margin $cell-margin-5x;
     margin: 0;
     box-sizing: border-box;
     text-align: left;
