--- a/assets/css-typography.scss.liquid
+++ b/assets/css-typography.scss.liquid
@@ -26,7 +26,7 @@ $cell-margin-4x: $cell-margin * 4;
 // Load local fonts
 @font-face {
   font-family: Moxie;
-  src: url(Moxie-Bold.otf);
+  src: url(Moxie-Bold2.otf);
 }
 
 @font-face {
@@ -66,6 +66,7 @@ a:hover {
   font-family: $logo-font;
   text-transform: uppercase;
   line-height: 1em;
+  // -webkit-text-stroke: 3px;
 }
 
 /* Submenublock */
@@ -144,7 +145,7 @@ a:hover {
   }
 
   ul {
-    margin: 0 0 $cell-margin 0;
+    margin: 0 0 $cell-margin-2x 0;
     padding: 0 0 0 $cell-margin-2x;
 
     li {
@@ -202,7 +203,10 @@ a:hover {
 
 .cartbanner {
   // font-family: $headline-font;
-  font-family: $cart-font;
+  // font-family: $cart-font;
+  font-family: $logo-font;
+  font-size: 2rem;
+  text-transform: uppercase;
 }
 
 #cart ul li h3 a {
