--- a/assets/css-colors-background.scss.liquid
+++ b/assets/css-colors-background.scss.liquid
@@ -5,6 +5,10 @@ html {
   background-attachment: fixed;
 }
 
+#autocenterbox {
+  background-color: white;
+}
+
 #appbody {
   background-color: $color-appbody;
 }
