new 'new' banderola svg

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -17,7 +17,7 @@
       {% for collection in product.collections %}
         {% case collection.handle %}
           {% when 'new' %}
-            <img class="new" src="{{ 'new04s.png' | asset_url }}" alt="new" height="107" width="107"/>
+            <img class="new" src="{{ 'new5k.svg' | asset_url }}" alt="new" height="107" width="107"/>
           {% when 'soon' %}
             <img class="new" src="{{ 'soon01k.png' | asset_url }}" alt="soon" />
           {% when 'pre-order' %}
