--- a/snippets/galleryproduct.liquid
+++ b/snippets/galleryproduct.liquid
@@ -1,73 +1,6 @@
 <div class="product">
 
-  {% if product.available %}
-    {% for mytag in product.tags %}
-      {% if mytag == 'Limited' %}
-        <a href="{{product.url}}">
-          <img class="limitedstar" src="{{ 'starlimited-10k-small-2x.png' | asset_url }}" alt="limitedstar" width="70" height="73" />
-        </a>
-      {% endif %}
-    {% endfor %}
-  {% else %}
-
-    {% assign soon = 'false' %}
-    {% for collection in product.collections %}
-      {% if collection.handle == 'soon' %}
-        {% assign soon = 'true' %}
-      {% endif %}
-    {% endfor %}
-
-    {% if soon =='true' %}
-
-      {% for mytag in product.tags %}
-        {% if mytag == 'Limited' %}
-          <a href="{{product.url}}">
-            <img class="limitedstar" src="{{ 'starlimited-10k-small-2x.png' | asset_url }}" alt="limitedstar" width="70" height="73" />
-          </a>
-        {% endif %}
-      {% endfor %}
-
-    {% else %}
-      <a href="{{product.url}}">
-        <img class="limitedstar" src="{{ 'starsoldout-10k-small-2x.png' | asset_url }}" alt="soldoutstar" width="70" height="73" />
-      </a>
-    {% endif %}
-  {% endif %}
-
-  {% for mytag in product.tags %}
-    {% if mytag == 'signed' %}
-      <a href="{{product.url}}">
-        <img class="signed" src="{{ 'signed_02k.png' | asset_url }}" alt="signed" />
-      </a>
-    {% endif %}
-  {% endfor %}
-
-    {% for mytag in product.tags %}
-    {% if mytag == 'Sale' %}
-      <a href="{{product.url}}">
-        <img class="sale" src="{{ 'SALE-03k-2x.png' | asset_url }}" alt="sale" width="62" height="47" />
-      </a>
-    {% endif %}
-  {% endfor %}
-
-
-  {% for collection in product.collections %}
-    {% case collection.handle %}
-      {% when 'new' %}
-        <a href="{{product.url}}">
-          <img class="new" src="{{ 'new04s.png' | asset_url }}" alt="new" height="107" width="107"/>
-        </a>
-      {% when 'soon' %}
-        <a href="{{product.url}}">
-          <img class="new" src="{{ 'soon01k.png' | asset_url }}" alt="soon" />
-        </a>
-            {% when 'pre-order' %}
-          <a href="{{product.url}}">
-          <img class="new" src="{{ 'PREORDERBANNER-02k.png' | asset_url }}" alt="pre-order" />
-        </a>
-      {% else %}
-    {% endcase %}
-  {% endfor %}
+  {%- include 'banderola' -%}
 
   {% if product.featured_image %}
     <div class="gallery-image">
