--- a/assets/css-typography.scss.liquid
+++ b/assets/css-typography.scss.liquid
@@ -23,6 +23,9 @@ $cell-margin-3x: $cell-margin * 3;
 $cell-margin-4x: $cell-margin * 4;
 
 /*eBoy SHOP-TYPOGRAPHY CSS*/
+
+@import url('https://fonts.googleapis.com/css?family=Ultra');
+
 // Load local fonts
 @font-face {
   font-family: Moxie;
@@ -65,7 +68,7 @@ a:hover {
   font-size: 6rem;
   font-family: $logo-font;
   text-transform: uppercase;
-  line-height: 1em;
+  // line-height: 1.2em;
   // -webkit-text-stroke: 3px;
 }
 
