--- a/assets/css-buttons.scss.liquid
+++ b/assets/css-buttons.scss.liquid
@@ -11,15 +11,17 @@ $cell-margin-3x: $cell-margin * 3;
 .checkoutbutton,
 .updatebutton,
 .buybutton,
+.linkbutton,
 .soldbutton,
 .soonbutton {
   -webkit-appearance: none;
   -moz-appearance: none;
+  font-style: italic;
+  font-family: $button-font;
 }
 
 
 .checkoutbutton {
-  font-family: $button-font;
   background-color: $color-link;
   color: white;
   border: none;
@@ -54,12 +56,12 @@ $cell-margin-3x: $cell-margin * 3;
 }
 
 .buybutton,
+.linkbutton,
 .soldbutton,
 .soonbutton {
-  font-family: $button-font;
   color: white;
   border: none;
-  padding: $cell-margin $cell-margin-half;
+  padding: $cell-margin-2x $cell-margin-half;
   margin: $cell-margin-2x 0 0 0;
   text-align: center;
   text-decoration: none;
@@ -82,5 +84,14 @@ $cell-margin-3x: $cell-margin * 3;
 }
 
 .soonbutton {
-  background-color: black;
+  background-color: #383521;
+}
+
+.linkbutton {
+  background-color: #383521;
+
+  a {
+    color: $color-black;
+    text-decoration: none;
+  }
 }
