--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -1,6 +1,6 @@
 <div id="footer">
   <form id="searchform" method="get" action="/search">
-    <input type="text" value="Search Shop" name="q" id="s" size="24" onfocus="clearMe(this)"/>
+    <input type="text" value="Search" name="q" id="s" size="24" onfocus="clearMe(this)"/>
   </form>
   <div id="footertxt" class="mdi-info">
     {% for link in linklists.footer.links %}
