--- a/assets/css-colors-background.scss.liquid
+++ b/assets/css-colors-background.scss.liquid
@@ -1,8 +1,9 @@
 $color-appbody: {{ settings.color-appbody }};
 
 html {
-  background: #f5f5f5;
-  background-attachment: fixed;
+  background-color: #f5f5f5;
+  // background-image: url("eBoy-Logo-StickerBack-01k-lightgrey.png");
+  // background-attachment: fixed;
 }
 
 #autocenterbox {
