--- a/assets/css-colors.scss.liquid
+++ b/assets/css-colors.scss.liquid
@@ -116,6 +116,10 @@ ul.leftlinks li a:hover {
 
 .product {
   background-color: #effcff;
+  box-shadow:
+    0 2px 2px 0 rgba(0,0,0,.14),
+    0 3px 1px -2px rgba(0,0,0,.2),
+    0 1px 5px 0 rgba(0,0,0,.12);
 }
 
 #collectionbox h2 {
@@ -160,6 +164,14 @@ ul.leftlinks li a:hover {
   h2 {
     color: $color-black;
   }
+}
+
+.pimage,
+.thumbnail {
+  box-shadow:
+    0 2px 2px 0 rgba(0,0,0,.14),
+    0 3px 1px -2px rgba(0,0,0,.2),
+    0 1px 5px 0 rgba(0,0,0,.12);
 }
 
 #pimage-select a img {
