Josefine Sans as logofont, other small edits

--- a/assets/css-appheader.scss.liquid
+++ b/assets/css-appheader.scss.liquid
@@ -22,7 +22,7 @@ $cell-margin-8x: $cell-margin * 8;
 
   #appheadertop {
     position: relative;
-    padding: $cell-margin $cell-margin $cell-margin-3x $cell-margin-5x;
+    padding: $cell-margin-3x $cell-margin $cell-margin-3x $cell-margin-5x;
     margin: 0;
     box-sizing: border-box;
     text-align: left;
