--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -48,7 +48,7 @@
 
     <div class="checkoutrow">
       <span class="mdi-creditcard"></span>
-      <input type="submit" value="Proceed to Checkout" name="checkout" class="checkoutbutton"/>
+      <input type="submit" value="Checkout" name="checkout" class="checkoutbutton"/>
     </div>
 
     {% if additional_checkout_buttons %}
