narrower letter spacing of logo

--- a/assets/css-typography.scss.liquid
+++ b/assets/css-typography.scss.liquid
@@ -23,13 +23,8 @@ $cell-margin-4x: $cell-margin * 4;
 
 /*eBoy SHOP-TYPOGRAPHY CSS*/
 // Load external fonts
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400i|Roboto+Mono');
-
-// Load local fonts
-@font-face {
-  font-family: Moxie;
-  src: url(Moxie-Bold.otf);
-}
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400i,600i');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
 
 /* Global */
 body {
@@ -60,11 +55,11 @@ a:hover {
 
 #logotype {
   font-size: 6rem;
-  line-height: 1em;
+  line-height: 1.2em;
   font-family: $logo-font;
   font-weight: 400;
   text-transform: uppercase;
-  letter-spacing: -5px;
+  letter-spacing: -6px;
 }
 
 /* Submenublock */
