--- a/assets/css-typography.scss.liquid
+++ b/assets/css-typography.scss.liquid
@@ -23,8 +23,8 @@ $cell-margin-4x: $cell-margin * 4;
 
 /*eBoy SHOP-TYPOGRAPHY CSS*/
 // Load external fonts
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400i,600i');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i');
 
 /* Global */
 body {
@@ -57,9 +57,10 @@ a:hover {
   font-size: 6rem;
   line-height: 1.2em;
   font-family: $logo-font;
+  font-style: italic;
   font-weight: 400;
   text-transform: uppercase;
-  letter-spacing: -6px;
+  letter-spacing: -0.0625em;
 }
 
 /* Submenublock */
