better gradient lines, buttons: rounded, removed arrow on linkarrows

--- a/assets/css-buttons.scss.liquid
+++ b/assets/css-buttons.scss.liquid
@@ -18,6 +18,7 @@ $cell-margin-3x: $cell-margin * 3;
   -moz-appearance: none;
   font-style: italic;
   font-family: $button-font;
+  border-radius: 0.25em;
 }
 
 
