--- a/assets/css-typography.scss.liquid
+++ b/assets/css-typography.scss.liquid
@@ -149,7 +149,9 @@ a:hover {
 }
 
 #productrelated h2 {
-  font-size: 24px;
+  // font-size: 24px;
+  // font-size: $fontsize;
+  font-style: italic;
 }
 
 /* Collection Pages */
