dashed lines in cart, other small edits

--- a/assets/css-cart.scss.liquid
+++ b/assets/css-cart.scss.liquid
@@ -15,6 +15,7 @@ $cell-margin-4x: $cell-margin * 4;
   box-sizing: border-box;
   padding: $cell-margin-4x;
   margin: $cell-margin $cell-margin 0 $cell-margin;
+  border: 1px dashed #d2d1cd;
 }
 
 #cartbox {
