active collection in sidebar gets highlighted background

--- a/assets/css-layout.scss.liquid
+++ b/assets/css-layout.scss.liquid
@@ -67,11 +67,10 @@ $color-related: #6a6858;
 
   .leftlinks-collections,
   .leftlinks-other {
-    padding: $cell-margin 0 $cell-margin $cell-margin;
-    clear: left;
+    padding: $cell-margin;
     box-sizing: border-box;
     margin: 0;
-    width: $cell;
+    width: 100%;
 
     li {
       list-style: none;
