--- a/assets/css-colors.scss.liquid
+++ b/assets/css-colors.scss.liquid
@@ -58,13 +58,25 @@ a:hover {
   }
 }
 
-ul.leftlinks li a {
-  color: $color-link;
-}
+#sidebarleft {
+  .leftlinks-collections,
+  .leftlinks-other {
+    .active-collection {
+      background-color: #f5f5f5;
+    }
 
-ul.leftlinks li a:hover {
-  color: white;
-  background-color: $color-link;
+    li {
+      a {
+        color: $color-link;
+        background-color: none;
+      }
+
+      a:hover {
+        color: white;
+        background-color: $color-link;
+      }
+    }
+  }
 }
 
 /* Cart Page */
@@ -78,7 +90,10 @@ ul.leftlinks li a:hover {
       color: inherit;
     }
   }
+}
 
+.checkoutrow .mdi-creditcard {
+  color: $color-link;
 }
 
 .cartbanner {
